implemented spec and fix for homepage signup form action

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -1,138 +1,138 @@
 
 <div class="slider-bg">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12 col-md-12 col-lg-12">
-				<div class="slider">
-					<div class="camera_wrap">
-						<div class="image">
-								<h1>We make it easy to develop software for cameras</h1>
-								<h4>With Evercam, you write software once and it will work with over 1,600 cameras.</h4>
-								<h4>OAuth 2.0 RESTful JSON API's use the standards you already know.</h4>
-								<h4>Forget the network issues, leave this to your camera...</h4>
-								<a href="/signup" class="btn btn-lg">
-									<button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
-								</a>
-						</div>
-					</div>
-				</div>     	
-			</div>
-		</div> 
-	</div> 
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-12 col-lg-12">
+        <div class="slider">
+          <div class="camera_wrap">
+            <div class="image">
+              <h1>We make it easy to develop software for cameras</h1>
+              <h4>With Evercam, you write software once and it will work with over 1,600 cameras.</h4>
+              <h4>OAuth 2.0 RESTful JSON API's use the standards you already know.</h4>
+              <h4>Forget the network issues, leave this to your camera...</h4>
+              <a href="/signup" class="btn btn-lg">
+                <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
-<% @title = 'Home' %> 
+<% @title = 'Home' %>
 <div class='col-sm-10 col-sm-offset-1'>
   <div id="beta">
-	
-	<div class="row">
-		<div class="titlesList">
-			<div class="col-md-12">
-				<ul>
-					<li><a href="#">Developer </a></li>
-					<li> | </li>
-					<li><a href="#"> Camera Owner </a></li>
-					<li> | </li>
-					<li><a href="#"> Manafacturer</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	
-	<div class="row">
-		<div class="language">
-			<h4>We Speak Your Language</h4>
-			<div class="col-md-6">
-				<img src="/img/languages.png" width="370px" align="right">
-			</div>
-			<div class="col-md-6">
-				<p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
-			</div>
-		</div>
-	</div>
-	
-	<div class="row">
-		<div class="device">
-			<h4>Bring Your Own Device</h4>
-			<div class="col-md-6">
-				<p>Our software is hardware agnostic. We work with over 10,000 camera manafactures including Sony, Panasonic and Axis.</p>
-			</div>
-			<div class="col-md-6">
-				<img src="/img/manafacturers.png" width="300px;" align="left">
-			</div>
-		</div>
-	</div>
-		
-	<div class="row">
-		<div class="language">
-			<h4>Flexible Billing</h4>
-			<div class="col-md-6">
-				<img src="/img/money.png" width="280px" align="right">
-			</div>
-			<div class="col-md-6">
-				<p>Lot&apos;s of options including development pays, customer requests, subscriptions, pay as you go and free tier.</p>
-			</div>
-		</div>
-	</div>
-	
 
-	<div class="row block-2">
-		<div class="icons">
-			<div class="col-sm-4">
-				<i class="icon-meh icon-large"></i>
-				<i class=""><img src="/img/CIRCLE_smiley.svg" width="120" alt="smiley"></i>
-				<h4>Free API</h4>
-				<p>100 requests per day<br/>Peer to peer<br/>Suitable for most uses</p>
-			</div>
-			<div class="col-sm-4">
-				<i class=""><img src="/img/CIRCLE_dollars1.svg" width="120" alt="dollars"></i>
-				<h4>Pay As You Go</h4>
-				<p>10,000 additional requests for &#36;20<br/>Peer to peer<br/>For the power user</p>
-			</div>
-			<div class="col-sm-4">
-				<i class=""><img src="/img/CIRCLE_rocket.svg" width="120" alt="rocket"></i>
-				<h4>Pro API</h4>
-				<p>Unlimited requests<br/>30 day archive<br/>SSL connection<br/>&#36;15 per camera per month</p>
-			</div>
-		</div>
-	</div>  
-	
+    <div class="row">
+      <div class="titlesList">
+        <div class="col-md-12">
+          <ul>
+            <li><a href="#">Developer </a></li>
+            <li> | </li>
+            <li><a href="#"> Camera Owner </a></li>
+            <li> | </li>
+            <li><a href="#"> Manafacturer</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="language">
+        <h4>We Speak Your Language</h4>
+        <div class="col-md-6">
+          <img src="/img/languages.png" width="370px" align="right">
+        </div>
+        <div class="col-md-6">
+          <p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="device">
+        <h4>Bring Your Own Device</h4>
+        <div class="col-md-6">
+          <p>Our software is hardware agnostic. We work with over 10,000 camera manafactures including Sony, Panasonic and Axis.</p>
+        </div>
+        <div class="col-md-6">
+          <img src="/img/manafacturers.png" width="300px;" align="left">
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="language">
+        <h4>Flexible Billing</h4>
+        <div class="col-md-6">
+          <img src="/img/money.png" width="280px" align="right">
+        </div>
+        <div class="col-md-6">
+          <p>Lot&apos;s of options including development pays, customer requests, subscriptions, pay as you go and free tier.</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row block-2">
+      <div class="icons">
+        <div class="col-sm-4">
+          <i class="icon-meh icon-large"></i>
+          <i class=""><img src="/img/CIRCLE_smiley.svg" width="120" alt="smiley"></i>
+          <h4>Free API</h4>
+          <p>100 requests per day<br/>Peer to peer<br/>Suitable for most uses</p>
+        </div>
+        <div class="col-sm-4">
+          <i class=""><img src="/img/CIRCLE_dollars1.svg" width="120" alt="dollars"></i>
+          <h4>Pay As You Go</h4>
+          <p>10,000 additional requests for &#36;20<br/>Peer to peer<br/>For the power user</p>
+        </div>
+        <div class="col-sm-4">
+          <i class=""><img src="/img/CIRCLE_rocket.svg" width="120" alt="rocket"></i>
+          <h4>Pro API</h4>
+          <p>Unlimited requests<br/>30 day archive<br/>SSL connection<br/>&#36;15 per camera per month</p>
+        </div>
+      </div>
+    </div>
+
     <br />
-	
-	<div class="signup_form">
-		<form class="form-inline" role="form">
-			<h3>Interested? Sign Up Today&hellip;</h3>
-			<div class="form-group">
-				<label class="sr-only" id="email" for="exampleInputEmail2">Email address</label>
-				<input type="email" class="form-control" id="email" placeholder="Your email">
-			</div>	
-			<button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
-		</form>
-	</div>
-	
+
+    <div class="signup_form">
+      <form method='POST' action='/interested' class="form-inline" role="form">
+        <h3>Interested? Sign Up Today&hellip;</h3>
+        <div class="form-group">
+          <label class="sr-only" id="email" for="exampleInputEmail2">Email address</label>
+          <input type="email" class="form-control" id="email" placeholder="Your email">
+        </div>
+        <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
+      </form>
+    </div>
+
     <br />
-	
-	<div id="marketplace">
-	
-		<h4>Take advantage of our marketplace apps and add amazing new <br />functionality to your camera streams in seconds&hellip;</h4>
-    
-		  <div id="market_container">
-			<i data-desc="Create timelapse videos using image sequences captured by your camera" class="fa fa-5x fa-clock-o"></i>
-			<i data-desc="Blur faces and vehicle license plates for anonymity" class="fa fa-5x fa-eye-slash"></i>
-			<i data-desc="Multicast your stream to any number of people without using up your broadband" class="fa fa-5x fa-signal"></i>
-			<i data-desc="Quickly transcribe your audio steam to text" class="fa fa-5x fa-file-text"></i>
-			<i data-desc="Determine if motion detected by a camera is just an itsy bitsy spider" class="fa fa-5x fa-bug"></i>
-			<i data-desc="Add watermarks like company logos to your videos" class="fa fa-5x fa-film"></i>
-			<i data-desc="Create Android apps without coding" class="fa fa-5x fa-android"></i>
-			<i data-desc="Monitor and send an alert if your camera goes offline" class="fa fa-5x fa-heart"></i>
-			<i data-desc="Send an email or sms when motion occurs" class="fa fa-5x fa-exclamation-triangle"></i>
-			<i data-desc="Connect your live stream directly to Facebook" class="fa fa-5x fa-facebook-square"></i>
-			<i data-desc="Send an SMS to your camera and it will respond with an MMS" class="fa fa-5x fa-envelope"></i>
-			<i data-desc="Send an audio stream to your camera" class="fa fa-5x fa-volume-up"></i>
-			<i data-desc="Archive and share your footage securely with other users" class="fa fa-5x fa-cloud"></i>
-			<i data-desc="Tell us what you want and we will build it for you" class="fa fa-5x fa-question-circle"></i>
-		  </div>
+
+    <div id="marketplace">
+
+      <h4>Take advantage of our marketplace apps and add amazing new <br />functionality to your camera streams in seconds&hellip;</h4>
+
+      <div id="market_container">
+        <i data-desc="Create timelapse videos using image sequences captured by your camera" class="fa fa-5x fa-clock-o"></i>
+        <i data-desc="Blur faces and vehicle license plates for anonymity" class="fa fa-5x fa-eye-slash"></i>
+        <i data-desc="Multicast your stream to any number of people without using up your broadband" class="fa fa-5x fa-signal"></i>
+        <i data-desc="Quickly transcribe your audio steam to text" class="fa fa-5x fa-file-text"></i>
+        <i data-desc="Determine if motion detected by a camera is just an itsy bitsy spider" class="fa fa-5x fa-bug"></i>
+        <i data-desc="Add watermarks like company logos to your videos" class="fa fa-5x fa-film"></i>
+        <i data-desc="Create Android apps without coding" class="fa fa-5x fa-android"></i>
+        <i data-desc="Monitor and send an alert if your camera goes offline" class="fa fa-5x fa-heart"></i>
+        <i data-desc="Send an email or sms when motion occurs" class="fa fa-5x fa-exclamation-triangle"></i>
+        <i data-desc="Connect your live stream directly to Facebook" class="fa fa-5x fa-facebook-square"></i>
+        <i data-desc="Send an SMS to your camera and it will respond with an MMS" class="fa fa-5x fa-envelope"></i>
+        <i data-desc="Send an audio stream to your camera" class="fa fa-5x fa-volume-up"></i>
+        <i data-desc="Archive and share your footage securely with other users" class="fa fa-5x fa-cloud"></i>
+        <i data-desc="Tell us what you want and we will build it for you" class="fa fa-5x fa-question-circle"></i>
+      </div>
 
     </div>
 
