updated markup and style to index page

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -30,7 +30,7 @@
       <div class="titlesList">
         <div class="col-md-12">
           <ul>
-            <li><a href="#">Developer </a></li>
+            <li>Developer</li>
             <li> | </li>
             <li><a href="#"> Camera Owner </a></li>
             <li> | </li>
@@ -42,36 +42,36 @@
 
     <div class="row">
       <div class="language">
-        <h4>We Speak Your Language</h4>
         <div class="col-md-6">
-          <img src="/img/languages.png" width="370px" align="right">
+          <img src="/img/languages.png" width="320px" align="right">
         </div>
-        <div class="col-md-6">
-          <p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
+        <div class="col-md-4">
+			<h4>We Speak Your Language</h4>
+			<p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
         </div>
       </div>
     </div>
 
     <div class="row">
       <div class="device">
-        <h4>Bring Your Own Device</h4>
-        <div class="col-md-6">
-          <p>Our software is hardware agnostic. We work with over 10,000 camera manafactures including Sony, Panasonic and Axis.</p>
+        <div class="col-md-4 col-md-offset-2">
+			<h4>Bring Your Own Device</h4>
+			<p>Our software is hardware agnostic. We work with over 10,000 camera manafactures including Panasonic, Sony and Axis.</p>
         </div>
         <div class="col-md-6">
-          <img src="/img/manafacturers.png" width="300px;" align="left">
+          <img src="/img/manafacturers.png" width="260px;" align="left">
         </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="language">
-        <h4>Flexible Billing</h4>
+      <div class="billing">
         <div class="col-md-6">
-          <img src="/img/money.png" width="280px" align="right">
+          <img src="/img/money.png" width="230px" align="right">
         </div>
-        <div class="col-md-6">
-          <p>Lot&apos;s of options including development pays, customer requests, subscriptions, pay as you go and free tier.</p>
+        <div class="col-md-4">
+			<h4>Flexible Billing</h4>
+			<p>Lot&apos;s of options including development pays, customer requests, subscriptions, pay as you go and free tier.</p>
         </div>
       </div>
     </div>
