--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -2349,13 +2349,13 @@ color: #eb5f53;
 }
 
 .titlesList ul  li{
-	font-size: 28px;
+	font-size: 26px;
 }
 
 .titlesList ul  li{
 	display: inline;
-list-style-type: none;
-padding: 0 30px 0 30px;
+	list-style-type: none;
+	padding: 0 42px 0 42px;
 }
 
 .titlesList ul  li a{
@@ -2367,23 +2367,24 @@ padding: 0 30px 0 30px;
 	text-decoration: none;
 }
 
-
 .language{
-	padding: 10px 0 50px 0;
-	height: 270px;
+	padding-top: 20px;
+	height: 200px;
 }
 
-.language h4{
-	color: #9E3128;
-	padding-top: 50px;
-	padding-bottom: 0;
-	margin-bottom: 0;
+#beta .language h4{
+	font-weight: bold;
+	font-size: 20px;
+	text-align: left;
+	padding-bottom: 10px;
+	margin: 0;
 }
 
 .language p{
-padding-top: 50px;
 	text-align:left;
 	font-size: 18px;
+	padding: 0;
+	margin: 0;
 }
 
 .language img{
@@ -2391,19 +2392,43 @@ padding-top: 50px;
 }
 
 .device{
-	padding: 10px 0 10px 0;
-		height: 270px;
+	padding-top: 30px;
+	height: 270px;
 }
 
-.device h4{
-	color: #9E3128;
-		padding-top: 50px;
+#beta .device h4{
+	font-weight: bold;
+	font-size: 20px;
+	text-align: left;
+	padding-bottom: 10px;
+	margin: 0;
 }
 
 .device p{
-	text-align:right;
+	text-align:left;
 	font-size: 18px;
-	padding-top: 20px;
+	padding: 0;
+	margin: 0;
+}
+
+.billing{
+	padding-top: 30px;
+	height: 270px;
+}
+
+#beta .billing h4{
+	font-weight: bold;
+	font-size: 20px;
+	text-align: left;
+	padding-bottom: 10px;
+	margin: 0;
+}
+
+.billing p{
+	text-align:left;
+	font-size: 18px;
+	padding: 0;
+	margin: 0;
 }
 
 .icons{
@@ -2415,8 +2440,8 @@ padding-top: 50px;
 }
 
 .slider-bg {
-background: url(../img/oconnell_2.jpg) center 0 no-repeat;
-margin-top: 23px;
+	background: url(../img/oconnell_2.jpg) center 0 no-repeat;
+	margin-top: 23px;
 }
 
 .image h1{
