--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -6,7 +6,7 @@
         <div class="slider">
           <div class="camera_wrap">
             <div class="image">
-              <h1>We make it easy to develop software for cameras</h1>
+              <h1>Making Cameras More Useful...</h1>
               <h4>With Evercam, you write software once and it will work with over 1,600 cameras.</h4>
               <h4>OAuth 2.0 RESTful JSON API's use the standards you already know.</h4>
               <h4>Forget the network issues, leave this to your camera...</h4>
@@ -30,11 +30,11 @@
       <div class="titlesList">
         <div class="col-md-12">
           <ul>
-            <li>Developer</li>
+            <li class="developerColor">Developer</li>
             <li> | </li>
             <li><a href="#"> Camera Owner </a></li>
             <li> | </li>
-            <li><a href="#"> Manafacturer</a></li>
+            <li><a href="#"> Manufacturer</a></li>
           </ul>
         </div>
       </div>
@@ -43,7 +43,7 @@
     <div class="row">
       <div class="language">
         <div class="col-md-6">
-          <img src="/img/languages.png" width="320px" align="right">
+          <img src="/img/languages1.png" width="340px" align="right">
         </div>
         <div class="col-md-4">
 			<h4>We Speak Your Language</h4>
@@ -59,7 +59,7 @@
 			<p>Our software is hardware agnostic. We work with over 10,000 camera manafactures including Panasonic, Sony and Axis.</p>
         </div>
         <div class="col-md-6">
-          <img src="/img/manafacturers.png" width="260px;" align="left">
+          <img src="/img/devices1.png" width="380px;" align="left">
         </div>
       </div>
     </div>
