--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -9,7 +9,6 @@
               <h1>Making Cameras More Useful...</h1>
               <h4>With Evercam, you write software once and it will work with over 1,600 cameras.</h4>
               <h4>OAuth 2.0 RESTful JSON API's use the standards you already know.</h4>
-              <h4>Forget the network issues, leave this to your camera...</h4>
               <a href="/signup" class="btn btn-lg">
                 <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
               </a>
@@ -81,7 +80,7 @@
       <div class="icons">
         <div class="col-sm-4">
           <i class="icon-meh icon-large"></i>
-          <i class=""><img src="/img/CIRCLE_smiley.svg" width="120" alt="smiley"></i>
+          <i class=""><img src="/img/CIRCLE_smiley1.svg" width="120" alt="smiley"></i>
           <h4>Free API</h4>
           <p>100 requests per day<br/>Peer to peer<br/>Suitable for most uses</p>
         </div>
