updated markup to index homepage

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -31,9 +31,9 @@
           <ul>
             <li class="developerColor">Developer</li>
             <li> | </li>
-            <li><a href="#"> Camera Owner </a></li>
+            <li> Camera Owner </li>
             <li> | </li>
-            <li><a href="#"> Manufacturer</a></li>
+            <li> Manufacturer</li>
           </ul>
         </div>
       </div>
@@ -41,8 +41,8 @@
 
     <div class="row">
       <div class="language">
-        <div class="col-md-6">
-          <img src="/img/languages1.png" width="340px" align="right">
+        <div class="col-md-4 col-md-offset-2">
+          <img src="/img/code.png" width="180px">
         </div>
         <div class="col-md-4">
 			<h4>We Speak Your Language</h4>
@@ -57,16 +57,16 @@
 			<h4>Bring Your Own Device</h4>
 			<p>Our software is hardware agnostic. We work with over 10,000 camera manafactures including Panasonic, Sony and Axis.</p>
         </div>
-        <div class="col-md-6">
-          <img src="/img/devices1.png" width="380px;" align="left">
+        <div class="col-md-3">
+          <img src="/img/cloudCog.png" width="180px" >
         </div>
       </div>
     </div>
 
     <div class="row">
       <div class="billing">
-        <div class="col-md-6">
-          <img src="/img/money.png" width="230px" align="right">
+        <div class="col-md-4 col-md-offset-2">
+          <img src="/img/shopping.png" width="180px">
         </div>
         <div class="col-md-4">
 			<h4>Flexible Billing</h4>
