--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -24,51 +24,44 @@
 <% @title = 'Home' %>
 <div class='col-sm-10 col-sm-offset-1'>
   <div id="beta">
-
-    <div class="row">
+  
+	<div class="row">
       <div class="titlesList">
-        <div class="col-md-12">
-          <ul>
-            <li class="developerColor">Developer</li>
-            <li> | </li>
-            <li> Camera Owner </li>
-            <li> | </li>
-            <li> Manufacturer</li>
-          </ul>
-        </div>
+        <div class="col-sm-4">
+            <p class="developerColor">Developer</p>
+		</div>
+		<div class="col-sm-4">
+            <p>Camera Owner</p>
+		</div>
+		<div class="col-sm-4">
+            <p>Manufacturer</p>
+		</div>
       </div>
     </div>
 
-    <div class="row">
+	
+	<div class="row">
       <div class="language">
-        <div class="col-md-4 col-md-offset-2">
-          <img src="/img/code.png" width="180px">
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-8 col-md-offset-2">
+          <img class="pull-left" src="/img/code.png" width="230px">
 			<h4>We Speak Your Language</h4>
 			<p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
         </div>
       </div>
     </div>
-
-    <div class="row">
+	<div class="row">
       <div class="device">
-        <div class="col-md-4 col-md-offset-2">
+        <div class="col-md-8 col-md-offset-2">
+          <img class="pull-right" src="/img/cloudCog.png" width="230px">
 			<h4>Bring Your Own Device</h4>
-			<p>Our software is hardware agnostic. We work with over 10,000 camera manafactures including Panasonic, Sony and Axis.</p>
-        </div>
-        <div class="col-md-3">
-          <img src="/img/cloudCog.png" width="180px" >
+			<p>Our software is hardware agnostic. We work with over 10,000 cameras and counting.</p>
         </div>
       </div>
     </div>
-
-    <div class="row">
+		<div class="row">
       <div class="billing">
-        <div class="col-md-4 col-md-offset-2">
-          <img src="/img/shopping.png" width="180px">
-        </div>
-        <div class="col-md-4">
+        <div class="col-md-8 col-md-offset-2">
+          <img class="pull-left" src="/img/shopping.png" width="230px">
 			<h4>Flexible Billing</h4>
 			<p>Lot&apos;s of options including development pays, customer requests, subscriptions, pay as you go and free tier.</p>
         </div>
