updated markup to index page

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -73,17 +73,17 @@
       <div class="icons">
         <div class="col-sm-4">
           <i class="icon-meh icon-large"></i>
-          <i class=""><img src="/img/CIRCLE_smiley1.svg" width="120" alt="smiley"></i>
+          <i class=""><img src="/img/heart_lred.png" width="120" alt="smiley"></i>
           <h4>Free API</h4>
           <p>100 requests per day<br/>Peer to peer<br/>Suitable for most uses</p>
         </div>
         <div class="col-sm-4">
-          <i class=""><img src="/img/CIRCLE_dollars1.svg" width="120" alt="dollars"></i>
+          <i class=""><img src="/img/dollar_lred.png" width="120" alt="dollars"></i>
           <h4>Pay As You Go</h4>
           <p>10,000 additional requests for &#36;20<br/>Peer to peer<br/>For the power user</p>
         </div>
         <div class="col-sm-4">
-          <i class=""><img src="/img/CIRCLE_rocket.svg" width="120" alt="rocket"></i>
+          <i class=""><img src="/img/cup_lred.png" width="120" alt="rocket"></i>
           <h4>Pro API</h4>
           <p>Unlimited requests<br/>30 day archive<br/>SSL connection<br/>&#36;15 per camera per month</p>
         </div>
