--- a/app/web/views/layouts/_footer.erb
+++ b/app/web/views/layouts/_footer.erb
@@ -34,6 +34,15 @@
   </div>
 </footer>
 
+<script id='GoogleAnalyticsScriptTag'>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-45962911-1', 'evercam.io');
+  ga('send', 'pageview');
+</script>
+
 <% if curr_user || cookies[:email] %>
   <script id="IntercomSettingsScriptTag">
     window.intercomSettings = {
