--- a/app/web/views/layouts/_head.erb
+++ b/app/web/views/layouts/_head.erb
@@ -13,6 +13,7 @@
 
 <script src='//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js'></script>
 <script src='//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js'></script>
+
+<script src='/js/jquery.mobilemenu.js'></script>
 <script src='/js/msgFloat.js'></script>
-    <script src='js/jquery.mobilemenu.js'></script>
 
