--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -7,7 +7,7 @@
           <div class="camera_wrap">
             <div class="image">
               <h1>Making Cameras More Useful...</h1>
-              <h4>With Evercam, you write software once and it will work with over 1,600 cameras.</h4>
+              <h4>With Evercam, you write software once and it works with over 1,600 cameras.</h4>
               <h4>OAuth 2.0 RESTful JSON API's use the standards you already know.</h4>
               <a href="/signup" class="btn btn-lg">
                 <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
@@ -43,7 +43,7 @@
 	<div class="row">
       <div class="language">
         <div class="col-md-8 col-md-offset-2">
-          <img class="pull-left" src="/img/code.png" width="230px">
+          <img class="pull-left" src="/img/code.png" width="230px" alt="code">
 			<h4>We Speak Your Language</h4>
 			<p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
         </div>
@@ -52,18 +52,18 @@
 	<div class="row">
       <div class="device">
         <div class="col-md-8 col-md-offset-2">
-          <img class="pull-right" src="/img/cloudCog.png" width="230px">
+          <img class="pull-right" src="/img/cloudCog.png" width="230px" alt="clouds">
 			<h4>Bring Your Own Device</h4>
-			<p>Our software is hardware agnostic. We work with over 10,000 cameras and counting.</p>
+			<p>Our software is hardware agnostic. We work with over 10,600 cameras and counting.</p>
         </div>
       </div>
     </div>
 		<div class="row">
       <div class="billing">
         <div class="col-md-8 col-md-offset-2">
-          <img class="pull-left" src="/img/shopping.png" width="230px">
+          <img class="pull-left" src="/img/shopping.png" width="230px" alt="shopping">
 			<h4>Flexible Billing</h4>
-			<p>Lot&apos;s of options including development pays, customer requests, subscriptions, pay as you go and free tier.</p>
+			<p>Lot&apos;s of options including developer pays, customer pays, subscriptions or pay as you go.</p>
         </div>
       </div>
     </div>
@@ -73,17 +73,17 @@
       <div class="icons">
         <div class="col-sm-4">
           <i class="icon-meh icon-large"></i>
-          <i class=""><img src="/img/heart_lred.png" width="120" alt="smiley"></i>
+          <i class=""><img src="/img/heart.svg" width="120" alt="heart"></i>
           <h4>Free API</h4>
           <p>100 requests per day<br/>Peer to peer<br/>Suitable for most uses</p>
         </div>
         <div class="col-sm-4">
-          <i class=""><img src="/img/dollar_lred.png" width="120" alt="dollars"></i>
+          <i class=""><img src="/img/dollar.svg" width="120" alt="dollars"></i>
           <h4>Pay As You Go</h4>
           <p>10,000 additional requests for &#36;20<br/>Peer to peer<br/>For the power user</p>
         </div>
         <div class="col-sm-4">
-          <i class=""><img src="/img/cup_lred.png" width="120" alt="rocket"></i>
+          <i class=""><img src="/img/cup.svg" width="120" alt="cup"></i>
           <h4>Pro API</h4>
           <p>Unlimited requests<br/>30 day archive<br/>SSL connection<br/>&#36;15 per camera per month</p>
         </div>
