--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -42,7 +42,7 @@
 	
 	<div class="row">
       <div class="language">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
           <img class="pull-left" src="/img/code.png" width="230px" alt="code">
 			<h4>We Speak Your Language</h4>
 			<p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
@@ -51,16 +51,16 @@
     </div>
 	<div class="row">
       <div class="device">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
           <img class="pull-right" src="/img/cloudCog.png" width="230px" alt="clouds">
 			<h4>Bring Your Own Device</h4>
-			<p>Our software is hardware agnostic. We work with over 10,600 cameras and counting.</p>
+			<p>Our software is hardware agnostic.<br/>We work with over 1,600 cameras and counting.</p>
         </div>
       </div>
     </div>
 		<div class="row">
       <div class="billing">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
           <img class="pull-left" src="/img/shopping.png" width="230px" alt="shopping">
 			<h4>Flexible Billing</h4>
 			<p>Lot&apos;s of options including developer pays, customer pays, subscriptions or pay as you go.</p>
@@ -69,7 +69,7 @@
     </div>
 
 
-    <div class="row block-2">
+    <div class="row icon_block">
       <div class="icons">
         <div class="col-sm-4">
           <i class="icon-meh icon-large"></i>
@@ -78,7 +78,7 @@
           <p>100 requests per day<br/>Peer to peer<br/>Suitable for most uses</p>
         </div>
         <div class="col-sm-4">
-          <i class=""><img src="/img/dollar.svg" width="120" alt="dollars"></i>
+          <i class=""><img src="/img/dollar.svg" width="120" alt="dollar"></i>
           <h4>Pay As You Go</h4>
           <p>10,000 additional requests for &#36;20<br/>Peer to peer<br/>For the power user</p>
         </div>
