updated markup for index file homepage

--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -2,13 +2,13 @@
 <div class="slider-bg">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-12 col-lg-12">
+      <div class="col-xs-12">
         <div class="slider">
           <div class="camera_wrap">
             <div class="image">
               <h1>Making Cameras More Useful...</h1>
-              <h4>With Evercam, you write software once and it works with over 1,600 cameras.</h4>
-              <h4>OAuth 2.0 RESTful JSON API's use the standards you already know.</h4>
+              <p>With Evercam, you write software once and it works with over 1,600 cameras.</p>
+              <p>OAuth 2.0 RESTful JSON API's use the standards you already know.</p>
               <a href="/signup" class="btn btn-lg">
                 <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
               </a>
@@ -43,7 +43,7 @@
 	<div class="row">
       <div class="language">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <img class="pull-left" src="/img/code.png" width="230px" alt="code">
+          <img class="pull-left" src="/img/language_small.svg" width="230px" alt="code">
 			<h4>We Speak Your Language</h4>
 			<p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
         </div>
@@ -52,7 +52,7 @@
 	<div class="row">
       <div class="device">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <img class="pull-right" src="/img/cloudCog.png" width="230px" alt="clouds">
+          <img class="pull-right" src="/img/clouds_small.svg" width="230px" alt="clouds">
 			<h4>Bring Your Own Device</h4>
 			<p>Our software is hardware agnostic.<br/>We work with over 1,600 cameras and counting.</p>
         </div>
@@ -61,7 +61,7 @@
 		<div class="row">
       <div class="billing">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <img class="pull-left" src="/img/shopping.png" width="230px" alt="shopping">
+          <img class="pull-left" src="/img/shopping_small.svg" width="230px" alt="shopping">
 			<h4>Flexible Billing</h4>
 			<p>Lot&apos;s of options including developer pays, customer pays, subscriptions or pay as you go.</p>
         </div>
