--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -97,7 +97,7 @@
         <h3>Interested? Sign Up Today&hellip;</h3>
         <div class="form-group">
           <label class="sr-only" id="email" for="exampleInputEmail2">Email address</label>
-          <input type="email" class="form-control" id="email" placeholder="Your email">
+          <input type="email" class="form-control" name='email' id="email" placeholder="Your email">
         </div>
         <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
       </form>
