--- a/app/web/views/marketplace.erb
+++ b/app/web/views/marketplace.erb
@@ -29,19 +29,17 @@
 					<h1>Have you some other ideas?</h1>
 						<form class="form-horizontal" role="form">
 							<div class="form-group">
-								<label for="inputEmail3" class="col-sm-4 col-sm-offset-1 control-label">Email</label>
-								<div class="col-sm-5">
-									<input type="email" class="form-control" id="inputEmail3" placeholder="email">
+								<div class="col-sm-6 col-sm-offset-3">
+									<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
 								</div>
 							</div>
 							<div class="form-group">
-								<label for="inputPassword3" class="col-sm-4 col-sm-offset-1 control-label">What are you looking for?</label>
-								<div class="col-sm-5">
-									<textarea class="form-control" id="inputWhat" placeholder="your message goes here"></textarea>
+								<div class="col-sm-6 col-sm-offset-3">
+									<textarea class="form-control" id="inputWhat" placeholder="What are you looking for?"></textarea>
 								</div>
 							</div>
 							<div class="form-group">
-								<div class="col-sm-offset-5 col-sm-9">
+								<div class="col-sm-offset-3 col-sm-9">
 									<button type="submit" class="btn btn-default" id="submit" >TELL US</button>
 								</div>
 							</div>
