updated markup to contact.erb - fixed typo

--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -31,7 +31,7 @@
 					<h4>Dublin</h4>
 					<p>12 Parnell Square East, Dublin 1, <br/>Ireland</p>
 					<p>Telephone:  +353 (1) 538 3333</p>
-					<p>E-Mail: <a href="mailto:info@evercam.io">howyra@evercam.io</a></p>
+					<p>E-Mail: <a href="mailto:info@evercam.io">howrya@evercam.io</a></p>
 					<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kuabCDr3nlic" width="640" height="480"></iframe></small></div>
 				</div>
 				<div class="col-md-6">
