--- a/app/web/views/login.erb
+++ b/app/web/views/login.erb
@@ -1,32 +1,32 @@
-<div class='col-sm-10 col-sm-offset-1'>
-	<div class="form_container">
-		<div class ="signIn">
-			<h1><%= @title = 'Login' %></h1>
-			<div class="row">
-				<div class="col-sm-10 col-sm-offset-1">
-						<form role='form', method='POST'>
-							<div class='form-group'>
-								<!--<label for='username'>Username or Email</label>-->
-								<input class='form-control' name='username' type='text' id ="inputEmail3" placeholder='username or email' required>
-							</div>
-							<div class='form-group'>
-								<!--<label for='password'>Password</label>-->
-								<input class='form-control' id ="inputEmail3" name='password' type='password' placeholder='password' required>
-								<p><a href="#">Forgot your password? </a></p>
-							</div>
-							<button type='submit' class='btn btn-primary pull-right' id="submit">Sign In</button>
-						</form>
-				</div>
-			</div>
-			<div class="account">
-				<div class="row">
-					<div class="col-sm-12">
-						<p>Not a member? <a href="/signup">Click here</a> to create an account.</p>
-					</div>
-				</div>
-			</div>		
-		</div>
-	</div>
+<div class="col-sm-10 col-sm-offset-1">
+  <div class="form_container">
+    <div class ="signIn">
+      <h1><%= @title = 'Login' %></h1>
+      <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
+          <form role="form", method="POST">
+            <div class="form-group">
+              <!--<label for="username">Username or Email</label>-->
+              <input class="form-control" name="username" type="text" id="inputEmail3" placeholder="Username or Email" required>
+            </div>
+            <div class="form-group">
+              <!--<label for="password">Password</label>-->
+              <input class="form-control" id ="inputEmail3" name="password" type="password" placeholder="Password" required>
+              <p><a href="#">Forgot your password?</a></p>
+            </div>
+            <button type="submit" class="btn btn-primary pull-right" id="submit">Sign In</button>
+          </form>
+        </div>
+      </div>
+      <div class="account">
+        <div class="row">
+          <div class="col-sm-12">
+            <p>Not a member? <a href="/signup">Click here</a> to create an account.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
