--- a/app/web/views/layouts/_header.erb
+++ b/app/web/views/layouts/_header.erb
@@ -1,39 +1,48 @@
 <header id='header'>
-	<div class='container'>
-		<div class='row'>
-			<div class='col-md-3'>
-				<div class='header-block clearfix'>
-					<h1>
-						<a class='navbar-brand' href='/'>
-						<img id='logo' src='/img/logo.svg'>
-						</a>
-					</h1>
-				</div>
-			</div>
-			<div class='col-md-7 col-md-offset-2 '>
-				<nav class="navbar navbar-default" role="navigation">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-					</div>
-									
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse">
-						<ul class='nav navbar-nav tm-navbar'>
-							<li><a href='/'>Home</a></li>
-							<li><a href='/connect'>Connect</a></li>
-							<li><a href='/docs'>Develop</a></li>
-							<li><a href='/marketplace'>Marketplace</a></li>
-							<li class="dropdown">
-							<li><a href="/login">Sign In</a></li>
-						</ul>
-					</div>
-									
-				</nav>
-			</div>
-		 </div>
+  <div class='container'>
+    <div class='row'>
+
+      <div class='col-md-3'>
+        <div class='header-block clearfix'>
+          <h1>
+            <a class='navbar-brand' href='/'>
+              <img id='logo' src='/img/logo.svg'>
+            </a>
+          </h1>
+        </div>
+      </div>
+
+      <div class='col-md-7 col-md-offset-2 '>
+        <nav class="navbar navbar-default" role="navigation">
+
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse">
+            <ul class='nav navbar-nav tm-navbar'>
+              <li><a href='/'>Home</a></li>
+              <li><a href='/connect'>Connect</a></li>
+              <li><a href='/docs'>Develop</a></li>
+              <li><a href='/marketplace'>Marketplace</a></li>
+
+              <% if curr_user %>
+                <li><a href="/logout">Sign Out</a></li>
+              <% else %>
+                <li><a href="/login">Sign In</a></li>
+              <% end %>
+            </ul>
+          </div>
+
+        </nav>
+      </div>
+
     </div>
+  </div>
 </header>
+
