--- a/app/web/views/marketplace/index.erb
+++ b/app/web/views/marketplace/index.erb
@@ -27,17 +27,17 @@
 
     <div class="form_container">
       <h1>Have you some other ideas?</h1>
-      <form class="form-horizontal" role="form">
+      <form method="POST" action="/marketplace/idea" class="form-horizontal" role="form">
         <div class="form-group">
           <label for="inputEmail3" class="col-sm-4 col-sm-offset-1 control-label">Email</label>
           <div class="col-sm-5">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Your address">
+            <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="Your address">
           </div>
         </div>
         <div class="form-group">
           <label for="inputPassword3" class="col-sm-4 col-sm-offset-1 control-label">What are you looking for?</label>
           <div class="col-sm-5">
-            <textarea class="form-control" id="inputWhat" placeholder="Your idea"></textarea>
+            <textarea class="form-control" name="idea" id="inputWhat" placeholder="Your idea"></textarea>
           </div>
         </div>
         <div class="form-group">
