--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -8,10 +8,12 @@
             <div class="image">
               <h1>Making Cameras More Useful...</h1>
               <p>With Evercam, you write software once and it works with over 1,600 cameras.</p>
-              <p>OAuth 2.0 RESTful JSON API's use the standards you already know.</p>
-              <a href="/signup" class="btn btn-lg">
-                <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
-              </a>
+              <div class="hidden-xs">
+                <p>OAuth 2.0 RESTful JSON API's use the standards you already know.</p>
+                <a href="/signup" class="btn btn-lg">
+                  <button id="signup" type="submit" class="btn btn-default" value="Sign up">Sign up</button>
+                </a>
+              </div>
             </div>
           </div>
         </div>
@@ -43,7 +45,9 @@
 	<div class="row">
       <div class="language">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <img class="pull-left" src="/img/language_small.svg" width="230px" alt="code">
+			<div class="hidden-xs">
+				<img class="pull-left" src="/img/language_small.svg" width="230px" alt="code">
+			</div>
 			<h4>We Speak Your Language</h4>
 			<p>We&apos;ve got wrappers to make it easy to develop in your favourite language.</p>
         </div>
@@ -52,7 +56,9 @@
 	<div class="row">
       <div class="device">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <img class="pull-right" src="/img/clouds_small.svg" width="230px" alt="clouds">
+			<div class="hidden-xs">
+				<img class="pull-right" src="/img/clouds_small.svg" width="230px" alt="clouds">
+			</div>
 			<h4>Bring Your Own Device</h4>
 			<p>Our software is hardware agnostic.<br/>We work with over 1,600 cameras and counting.</p>
         </div>
@@ -61,9 +67,11 @@
 		<div class="row">
       <div class="billing">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <img class="pull-left" src="/img/shopping_small.svg" width="230px" alt="shopping">
-			<h4>Flexible Billing</h4>
-			<p>Lot&apos;s of options including developer pays, customer pays, subscriptions or pay as you go.</p>
+			<div class="hidden-xs">
+				<img class="pull-left" src="/img/shopping_small.svg" width="230px" alt="shopping">
+			</div>
+				<h4>Flexible Billing</h4>
+				<p>Lot&apos;s of options including developer pays, customer pays, subscriptions or pay as you go.</p>
         </div>
       </div>
     </div>
@@ -127,9 +135,9 @@
       </div>
 
     </div>
-
-    <h4 id="desc">
-    </h4>
+    
+      <h4 id="desc">
+      </h4>
 
     <script>
       $(document).ready(function() {
