--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -1,48 +1,48 @@
 <div class="container">
-	<div class="row">    
-		<div class="col-sm-10 col-sm-offset-1">
-			<h3>Contact Us</h3>
-			<div class="contactform_container">
-				<form class="form-horizontal" role="form">
-					<div class="form-group">	
-						<div class="col-sm-8 col-sm-offset-2">
-							<input type="text" class="form-control" id="inputEmail3" placeholder="name">
-						</div>
-					</div>
-					<div class="form-group">	
-						<div class="col-sm-8 col-sm-offset-2">
-							<input type="email" class="form-control" id="inputEmail3" placeholder="email">
-						</div>
-					</div>
-					<div class="form-group">				
-						<div class="col-sm-8 col-sm-offset-2">
-							<textarea class="form-control" id="inputWhat" placeholder="your message goes here"></textarea>
-						</div>
-					</div>
-					<div class="form-group">
-						<div class="col-sm-offset-2 col-sm-9">
-							<button type="submit" class="btn btn-default" id="submit" >Submit</button>
-						</div>
-					</div>
-				</form>
-			</div><!-- end contactform_container -->
-			<div class="address">
-				<div class="col-md-6">
-					<h4>Dublin</h4>
-					<p>12 Parnell Square East, Dublin 1, <br/>Ireland</p>
-					<p>Telephone:  +353 (1) 538 3333</p>
-					<p>E-Mail: <a href="mailto:info@evercam.io">howyra@evercam.io</a></p>
-					<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kuabCDr3nlic" width="640" height="480"></iframe></small></div>
-				</div>
-				<div class="col-md-6">
-					<h4>Silicon Valley</h4>
-					<p>800 W. El Camino Real, Suite 350, Mountain View,<br/> CA 94040, USA</p>
-					<p>Telephone:  +1 (650) 419 3588</p>
-					<p>E-Mail: <a href="mailto:info@evercam.io">wassup@evercam.io</a></p>
-					<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kzJ0biOyIYMo" width="640" height="480"></iframe></div>
-				</div>
-			</div><!-- end address -->
-		</div> 
-	</div> 
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
+      <h3>Contact Us</h3>
+      <div class="contactform_container">
+        <form method="POST" action="/contact" class="form-horizontal" role="form">
+          <div class="form-group">
+            <div class="col-sm-8 col-sm-offset-2">
+              <input type="text" class="form-control" id="inputEmail3" name="name" placeholder="Name">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-8 col-sm-offset-2">
+              <input type="email" class="form-control" id="inputEmail3" name="email" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-8 col-sm-offset-2">
+              <textarea class="form-control" id="inputWhat" name="body" placeholder="Your message goes here"></textarea>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-9">
+              <button type="submit" class="btn btn-default" id="submit" >Submit</button>
+            </div>
+          </div>
+        </form>
+      </div><!-- end contactform_container -->
+      <div class="address">
+        <div class="col-md-6">
+          <h4>Dublin</h4>
+          <p>12 Parnell Square East, Dublin 1, <br/>Ireland</p>
+          <p>Telephone:  +353 (1) 538 3333</p>
+          <p>E-Mail: <a href="mailto:info@evercam.io">howyra@evercam.io</a></p>
+          <div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kuabCDr3nlic" width="640" height="480"></iframe></div>
+        </div>
+        <div class="col-md-6">
+          <h4>Silicon Valley</h4>
+          <p>800 W. El Camino Real, Suite 350, Mountain View,<br/> CA 94040, USA</p>
+          <p>Telephone:  +1 (650) 419 3588</p>
+          <p>E-Mail: <a href="mailto:info@evercam.io">wassup@evercam.io</a></p>
+          <div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kzJ0biOyIYMo" width="640" height="480"></iframe></div>
+        </div>
+      </div><!-- end address -->
+    </div>
+  </div>
 </div>
- 
+
