--- a/app/web/views/layouts/_footer.erb
+++ b/app/web/views/layouts/_footer.erb
@@ -1,7 +1,7 @@
 <footer>
   <div class='container'>
     <div class='row'>
-      <div class='col-sm-12'>
+      <div class='col-xs-10 col-xs-offset-1'>
         <ul class='social-icons'>
           <li>
           <a href='https://twitter.com/evrcm' target='_blank' class='fa-twitter'></a>
