updated markup to develop index page

--- a/app/web/views/docs/index.erb
+++ b/app/web/views/docs/index.erb
@@ -8,18 +8,22 @@
   
   <div class="row">
     <div class="col-sm-6">
+      <h5>On your website</h5>
+      <p>Start accepting payments on your website, with our JavaScript libraries. <a href="#">Learn more</a></p>
     </div>
     <div class="col-sm-6">
+      <h5>In your mobile app</h5>
+      <p>We have the toolkits for native iPhone and Android applications. <a href="#">Learn more</a></p>
     </div>
   </div>
   
   <div class="row">
     <div class="col-sm-12">
-      <h5>Need Help?</h5>
+      <h4>Need Help?</h4>
       <p>We&apos;re always happy to help out with code or any other questions you might have. <a href="#">Learn more</a></p>
-      <h5>API mailing list</h5>
+      <h4>API mailing list</h4>
       <p>Building a third party integration or Connect application? Join our mailing list to be notified of API changes and stay up to date. <a href="#">View mailing list</a></p>
-      <h5>Resources</h5>
+      <h4>Resources</h4>
       <ul>
         <li><a href="#">API Libraries</a></li>
         <li><a href="#">Example Projects</a></li>
