updated markup and style to index homepage - padding to logo

--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -1642,6 +1642,11 @@ footer span a:hover {
 
 @media (max-width: 481px) {
 
+  header #logo {
+  padding-left: 50px;
+}
+
+
   .slider .camera_wrap {
     min-height: 200px
   }
