--- a/app/web/views/index.erb
+++ b/app/web/views/index.erb
@@ -76,18 +76,17 @@
       <div class="row icon_block">
         <div class="icons">
           <div class="col-sm-4">
-            <i class="icon-meh icon-large"></i>
-            <i class=""><img src="/img/heart.svg" width="120" alt="heart"></i>
+            <img src="/img/heart.svg" width="120" alt="heart">
             <h4>Free API</h4>
             <p>100 requests per day<br/>Peer to peer<br/>Suitable for most uses</p>
           </div>
           <div class="col-sm-4">
-            <i class=""><img src="/img/dollar.svg" width="120" alt="dollar"></i>
+            <img src="/img/dollar.svg" width="120" alt="dollar">
             <h4>Pay As You Go</h4>
             <p>10,000 additional requests for &#36;20<br/>Peer to peer<br/>For the power user</p>
           </div>
           <div class="col-sm-4">
-            <i class=""><img src="/img/cup.svg" width="120" alt="cup"></i>
+            <img src="/img/cup.svg" width="120" alt="cup">
             <h4>Pro API</h4>
             <p>Unlimited requests<br/>30 day archive<br/>SSL connection<br/>&#36;15 per camera per month</p>
           </div>
