updated markup to idex/developer homepage

--- a/app/web/views/docs/index.erb
+++ b/app/web/views/docs/index.erb
@@ -1,47 +1,48 @@
 <div class="container">
-<div class="developer">
-  <div class="row">
-    <div class="col-sm-10">
-      <h1>Getting Started</h1>
-      <p>Below you'll find tutorials that will teach you how to use Evercam, and reference documentation for all the moving parts.</p>
-    </div>
-  </div>
+  <div class="developer">
   
-  <div class="test">
     <div class="row">
-      <div class="col-sm-5">
-        <div class="devIcons">
-          <img src="/img/browser.png" width="120" alt="browser">
-          <h5>On your website</h5>
-          <p>Start accepting payments on your website, with our JavaScript libraries. <a href="#">Learn more</a></p>
-        </div>
-      </div>
-      <div class="col-sm-5">
-        <div class="devIcons">
-          <img src="/img/mobiles.png" width="120" alt="mobiles">
-          <h5>In your mobile app</h5>
-          <p>We have the toolkits for native iPhone and Android applications. <a href="#">Learn more</a></p>
-        </div>
+      <div class="col-sm-10">
+        <h1>Getting Started</h1>
+        <p>Below you'll find tutorials that will teach you how to use Evercam, and reference documentation for all the moving parts.</p>
       </div>
     </div>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-10">
-    <div class="bottomRow">
-      <h5>Need Help?</h5>
-      <p>We&apos;re always happy to help out with code or any other questions you might have. <a href="#">Learn more</a></p>
-      <h5>API mailing list</h5>
-      <p>Building a third party integration or Connect application? Join our mailing list to be notified of API changes and stay up to date. <a href="#">View mailing list</a></p>
-      <h5>Resources</h5>
-      <ul>
-        <li><a href="#">API Libraries</a></li>
-        <li><a href="#">Example Projects</a></li>
-      </ul>
-      </div>
-    </div>
-  </div>
   
-   </div>
+    <div class="test">
+      <div class="row">
+        <div class="col-sm-5">
+          <div class="devIcons">
+            <p><a href="#"><img src="/img/browser2.svg" width="120" alt="browser"></a></p>
+            <h5>On your website</h5>
+            <p>Start accepting payments on your website, with our JavaScript libraries. <a href="#">Learn more</a></p>
+          </div>
+        </div>
+        <div class="col-sm-5">
+          <div class="devIcons">
+            <p><a href="#"><img src="/img/mobiles1.svg" width="120" alt="mobiles"></a></p>
+            <h5>In your mobile app</h5>
+            <p>We have the toolkits for native iPhone and Android applications. <a href="#">Learn more</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-10">
+        <div class="bottomRow">
+          <h5>Need Help?</h5>
+          <p>We&apos;re always happy to help out with code or any other questions you might have. <a href="#">Learn more</a></p>
+          <h5>API mailing list</h5>
+          <p>Building a third party integration or Connect application? Join our mailing list to be notified of API changes and stay up to date. <a href="#">View mailing list</a></p>
+          <h5>Resources</h5>
+          <ul>
+            <li><a href="#">API Libraries</a></li>
+            <li><a href="#">Example Projects</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  
   </div>
+</div>
       
